# LightingStudio

./: .gitignore  Definitions.txt  README.md  pyproject.toml  samples.json  test_coordinate_fix.py  tmp.exr
archive/: ArHosekSkyModelData_CIEXYZ.h  ArHosekSkyModelData_RGB.h  HosekDataXYZ.h  shLightingExtractDLight.js
setup/: setup.ps1
src/LightingStudio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/LightingStudio/analysis/: datatypes.py  debug.ipynb  io.py  utils.py  view_solid_angle.py
src/LightingStudio/analysis/area_light/: density_estimation.py  density_estimation_old.py  find_area_lights.py
src/LightingStudio/analysis/blender_interface/: blender_renderer.py  prepare_blend_file.py
src/LightingStudio/analysis/core/: density_estimation.py  intensity_calculation.py  median_cut.py  median_cut_optimized.py  sph.py
src/LightingStudio/analysis/naive/: find_naive_metrics.py  intensity_calculation.py
src/LightingStudio/analysis/point_light/: find_point_lights.py  median_cut.py  median_cut_old.py
src/LightingStudio/analysis/report/: aggregate_statistics.py  datatypes.py  generate_report.py  generate_report_parallel.py  html_report.py
src/LightingStudio/analysis/spherical_harmonic/: find_spherical_harmonics.py  sanity_checks.py  sph.py  sph_metrics.py
src/LightingStudio/analysis/spherical_harmonic/sanity_checks/: __init__.py  __main__.py  unit_tests.py  visualization.py
src/LightingStudio/analysis/unit_tests/: spherical_harmonic_test.py  transforms_test.py  view_cos_lobe_test.py  view_solid_angle_test.py
src/LightingStudio/analysis/utils/: io.py  transforms.py
src/LightingStudio/anaylsis/notebooks/: view_polyhaven.ipynb
src/LightingStudio/ingest/: both_sunsky.cpp  hosek_shadertoy.cpp  hosek_sky.py  preetham_shadertoy.cpp  preetham_sky.py  run_skybox_light.py  scrape_polyhaven.py  skybox_light_utils.py  skylight_model.py
tmp/source/: 1k_database.csv
tmp/source/1k/: Abandoned Bakery.exr  Abandoned Construction.exr
